--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello again coursersa</title>
 </head>
 <body>
-<h1>hihi coursera</h1>
+<h1>hihi coursera! testing out man</h1>
 </body>
 </html>
